@@ -14,6 +14,7 @@ ChangeLog
           pip uninstall pyldap
           pip install python-ldap
 
+    * Add ``DateTimeField``, with proper lookups.
 
 1.0.0 (2018-03-06)
 ------------------
